qlc/cpp/ql.h

  /* utilities */
  const char *DLLEXPORT qlVersion();
  const char *DLLEXPORT qlBoostVersion();
  /* settings */
  int DLLEXPORT qlSettingsEvaluationDate();
  int DLLEXPORT qlSettingsEnforceTodaysHistoricFixings();
  void DLLEXPORT qlSettingsSetEvaluationDate(int x, char **e);
  void DLLEXPORT qlSettingsSetEnforceTodaysHistoricFixings(int x);
  int DLLEXPORT qlSettingsIncludeTodaysCashFlows();
  void DLLEXPORT qlSettingsSetIncludeTodaysCashFlows(int x);
  int DLLEXPORT qlSettingsIncludeReferenceDateEvents();
  void DLLEXPORT qlSettingsSetIncludeReferenceDateEvents(int x0);
  void *DLLEXPORT qlSavedSettings();
  void DLLEXPORT qlFreeSavedSettings(void *settings);